Update: main - Diff report completed

--- a/diff_core_75905.html
+++ b/diff_core_75905.html
@@ -6458,7 +6458,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">            <del>raise</del> <del>HomeAssistantError(&quot;Changing</del> <del>hvac_mode</del> <del>is</del> <del>not supported</del>.<del>&quot;)</del></span>
+            <span class="d2h-code-line-ctn">            <del>raise</del> <del>HomeAssistantError(&quot;Changing</del> <del>hvac_mode</del> <del>via</del> <del>this command is not supported&quot;)</del></span>
         </div>
     </td>
 </tr><tr>
@@ -6590,7 +6590,7 @@
     <td class="d2h-del">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">                raise ValueError(&quot;Invalid temperature change requested.&quot;)</span>
+            <span class="d2h-code-line-ctn">                raise ValueError(&quot;Invalid temperature change requested&quot;)</span>
         </div>
     </td>
 </tr><tr>
@@ -6634,7 +6634,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">            <ins>self._attr_max_temp</ins> <ins>&lt;</ins> <ins>temperature</ins> <ins>&lt;</ins> <ins>self</ins>.<ins>_attr_min_temp</ins></span>
+            <span class="d2h-code-line-ctn">            <ins>self._attr_max_temp</ins> <ins>&lt;</ins> <ins>temperature</ins> <ins>&lt;</ins> <ins>self._attr_min_temp</ins></span>
         </div>
     </td>
 </tr><tr>
@@ -6744,7 +6744,7 @@
     <td class="d2h-del">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">            raise HomeAssistantError(&quot;Unsupported hvac_mode.&quot;)</span>
+            <span class="d2h-code-line-ctn">            raise HomeAssistantError(&quot;Unsupported hvac_mode&quot;)</span>
         </div>
     </td>
 </tr><tr>
