Update: main - Diff report completed

--- a/diff_core_75905.html
+++ b/diff_core_75905.html
@@ -6458,7 +6458,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">            <del>raise</del> <del>HomeAssistantError(&quot;Changing</del> <del>hvac_mode</del> <del>via</del> <del>this command is not supported&quot;)</del></span>
+            <span class="d2h-code-line-ctn">            <del>await</del> self.<del>async_set_hvac_mode(kwargs[ATTR_HVAC_MODE])</del></span>
         </div>
     </td>
 </tr><tr>
@@ -6634,7 +6634,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">            <ins>self._attr_max_temp</ins> <ins>&lt;</ins> <ins>temperature</ins> <ins>&lt;</ins> <ins>self._attr_min_temp</ins></span>
+            <span class="d2h-code-line-ctn">            <ins>self._attr_max_temp</ins> <ins>&lt; temperature &lt; </ins>self.<ins>_attr_min_temp</ins></span>
         </div>
     </td>
 </tr><tr>
