--- a/diff_p1_update.html
+++ b/diff_p1_update.html
@@ -144,8 +144,8 @@
           <path d="M6 9H3V7h3V4l5 4-5 4V9z m8-7v12c0 0.55-0.45 1-1 1H1c-0.55 0-1-0.45-1-1V2c0-0.55 0.45-1 1-1h12c0.55 0 1 0.45 1 1z m-1 0H1v12h12V2z"></path>
       </svg>      <a href="#d2h-854709" class="d2h-file-name">/home/runner/work/progress/progress/clones/{beta/custom_components → ha-core/homeassistant/components}/plugwise/gateway.py</a>
       <span class="d2h-file-stats">
-          <span class="d2h-lines-added">+30</span>
-          <span class="d2h-lines-deleted">-93</span>
+          <span class="d2h-lines-added">+31</span>
+          <span class="d2h-lines-deleted">-94</span>
       </span>
     </span>
 </li>
@@ -14402,7 +14402,7 @@
 <tr>
     <td class="d2h-code-linenumber d2h-info"></td>
     <td class="d2h-info">
-        <div class="d2h-code-line">@@ -62,54 +41,31 @@</div>
+        <div class="d2h-code-line">@@ -62,95 +41,47 @@</div>
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
@@ -15141,11 +15141,16 @@
             <span class="d2h-code-line-ctn">    device_registry.async_get_or_create(</span>
         </div>
     </td>
-</tr>
-<tr>
-    <td class="d2h-code-linenumber d2h-info"></td>
-    <td class="d2h-info">
-        <div class="d2h-code-line">@@ -117,40 +73,15 @@</div>
+</tr><tr>
+    <td class="d2h-code-linenumber d2h-cntx">
+      <div class="line-num1">116</div>
+<div class="line-num2">72</div>
+    </td>
+    <td class="d2h-cntx">
+        <div class="d2h-code-line">
+            <span class="d2h-code-line-prefix">&nbsp;</span>
+            <span class="d2h-code-line-ctn">        config_entry_id=entry.entry_id,</span>
+        </div>
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
@@ -15170,14 +15175,14 @@
         </div>
     </td>
 </tr><tr>
-    <td class="d2h-code-linenumber d2h-cntx">
+    <td class="d2h-code-linenumber d2h-del d2h-change">
       <div class="line-num1">119</div>
-<div class="line-num2">75</div>
+<div class="line-num2"></div>
     </td>
-    <td class="d2h-cntx">
+    <td class="d2h-del d2h-change">
         <div class="d2h-code-line">
-            <span class="d2h-code-line-prefix">&nbsp;</span>
-            <span class="d2h-code-line-ctn">        name=entry.title,</span>
+            <span class="d2h-code-line-prefix">-</span>
+            <span class="d2h-code-line-ctn">        <del>model</del>=<del>api</del>.<del>smile_model</del>,</span>
         </div>
     </td>
 </tr><tr>
@@ -15188,7 +15193,18 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">        model=api.smile_name,</span>
+            <span class="d2h-code-line-ctn">        <del>name</del>=api.smile_name,</span>
+        </div>
+    </td>
+</tr><tr>
+    <td class="d2h-code-linenumber d2h-ins d2h-change">
+      <div class="line-num1"></div>
+<div class="line-num2">75</div>
+    </td>
+    <td class="d2h-ins d2h-change">
+        <div class="d2h-code-line">
+            <span class="d2h-code-line-prefix">+</span>
+            <span class="d2h-code-line-ctn">        <ins>name</ins>=<ins>entry</ins>.<ins>title</ins>,</span>
         </div>
     </td>
 </tr><tr>
@@ -15199,7 +15215,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">        model=<ins>f&quot;Smile {</ins>api.smile_name<ins>}&quot;</ins>,</span>
+            <span class="d2h-code-line-ctn">        <ins>model</ins>=<ins>f&quot;Smile {</ins>api.smile_name<ins>}&quot;</ins>,</span>
         </div>
     </td>
 </tr><tr>
@@ -16069,7 +16085,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">  &quot;<del>version</del>&quot;: &quot;<del>0</del>.<del>27</del>.<del>0a0</del>&quot;,</span>
+            <span class="d2h-code-line-ctn">  &quot;<del>version</del>&quot;: &quot;<del>0</del>.<del>27</del>.<del>0a2</del>&quot;,</span>
         </div>
     </td>
 </tr><tr>
@@ -16102,7 +16118,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">  &quot;<del>requirements</del>&quot;: [&quot;<del>https:&#x2F;&#x2F;test-files</del>.<del>pythonhosted</del>.<del>org&#x2F;packages&#x2F;5c&#x2F;03&#x2F;52c98e5459c2566b11ed8a46bd172820f8d3c63c2ad1e4e99b8c50f6d0e9&#x2F;plugwise-0</del>.<del>22.0a13.tar.gz#plugwise==0.22.0a13</del>&quot;],</span>
+            <span class="d2h-code-line-ctn">  &quot;<del>requirements</del>&quot;: [&quot;<del>https:&#x2F;&#x2F;test-files</del>.<del>pythonhosted</del>.<del>org&#x2F;packages&#x2F;42&#x2F;a7&#x2F;1a7c91b1824f2db1aff191d49d2e73a8baef2bfa0330ba974a7985dee9c3&#x2F;plugwise-0</del>.<del>22.0a16.tar.gz#plugwise==0.22.0a16</del>&quot;],</span>
         </div>
     </td>
 </tr><tr>
