Update: main - Diff report completed

--- a/diff_p1_update.html
+++ b/diff_p1_update.html
@@ -16085,7 +16085,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">  &quot;<del>version</del>&quot;: &quot;<del>0</del>.<del>27</del>.<del>0a2</del>&quot;,</span>
+            <span class="d2h-code-line-ctn">  &quot;<del>version</del>&quot;: &quot;<del>0</del>.<del>27</del>.<del>1a0</del>&quot;,</span>
         </div>
     </td>
 </tr><tr>
@@ -16118,7 +16118,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">  &quot;<del>requirements</del>&quot;: [&quot;<del>https:&#x2F;&#x2F;test-files</del>.<del>pythonhosted</del>.<del>org&#x2F;packages&#x2F;42&#x2F;a7&#x2F;1a7c91b1824f2db1aff191d49d2e73a8baef2bfa0330ba974a7985dee9c3&#x2F;plugwise-0</del>.<del>22.0a16.tar.gz#plugwise==0.22.0a16</del>&quot;],</span>
+            <span class="d2h-code-line-ctn">  &quot;<del>requirements</del>&quot;: [&quot;<del>https:&#x2F;&#x2F;test-files</del>.<del>pythonhosted</del>.<del>org&#x2F;packages&#x2F;45&#x2F;b1&#x2F;f5e89f30fae253db825ddd489a1b0d731c23c5ef85e8910c36e541afe6aa&#x2F;plugwise-0</del>.<del>22.1a0.tar.gz#plugwise==0.22.1a0</del>&quot;],</span>
         </div>
     </td>
 </tr><tr>
