--- a/diff_p1-update.html
+++ b/diff_p1-update.html
@@ -17236,7 +17236,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">  &quot;<del>version</del>&quot;: &quot;<del>0</del>.<del>27</del>.<del>0a3</del>&quot;,</span>
+            <span class="d2h-code-line-ctn">  &quot;<del>version</del>&quot;: &quot;<del>0</del>.<del>27</del>.<del>0</del>&quot;,</span>
         </div>
     </td>
 </tr><tr>
