Update: main - Diff report completed

--- a/diff_DOMAIN_to_Platform.html
+++ b/diff_DOMAIN_to_Platform.html
@@ -10356,7 +10356,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">        unique_id <ins>=</ins> <ins>discovery_info</ins>.<ins>hostname.split(&quot;.&quot;)[0]</ins></span>
+            <span class="d2h-code-line-ctn">        unique_id <ins>=</ins> <ins>discovery_info</ins>.<ins>hostname.split(&quot;.&quot;)[0].split(&quot;-&quot;)[0]</ins></span>
         </div>
     </td>
 </tr><tr>
