--- a/diff_refact_usb_for_core_2021_8.html
+++ b/diff_refact_usb_for_core_2021_8.html
@@ -11192,7 +11192,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">        <ins>unique_id</ins> = discovery_info.<ins>hostname.split</ins>(&quot;<ins>.</ins>&quot;)<ins>[0]</ins></span>
+            <span class="d2h-code-line-ctn">        <ins>unique_id</ins> = discovery_info.<ins>hostname.split</ins>(&quot;<ins>.</ins>&quot;)<ins>[0].split(&quot;-&quot;)[0]</ins></span>
         </div>
     </td>
 </tr><tr>
