Update: main - Diff report completed

--- a/diff_p1_update.html
+++ b/diff_p1_update.html
@@ -4836,7 +4836,7 @@
     <td class="d2h-del">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">            self._attr_hvac_modes.append(HVACMode.OFF)</span>
+            <span class="d2h-code-line-ctn">            self._attr_hvac_modes.append(HVACMode.OFF)  # pragma: no cover</span>
         </div>
     </td>
 </tr><tr>
@@ -16234,7 +16234,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">  &quot;<del>version</del>&quot;: &quot;<del>0</del>.<del>27</del>.<del>0a3</del>&quot;,</span>
+            <span class="d2h-code-line-ctn">  &quot;<del>version</del>&quot;: &quot;<del>0</del>.<del>27</del>.<del>0a4</del>&quot;,</span>
         </div>
     </td>
 </tr><tr>
@@ -16267,7 +16267,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">  &quot;<del>requirements</del>&quot;: [&quot;<del>plugwise==0</del>.<del>22</del>.<del>0</del>&quot;],</span>
+            <span class="d2h-code-line-ctn">  &quot;<del>requirements</del>&quot;: [&quot;<del>plugwise==0</del>.<del>22</del>.<del>1</del>&quot;],</span>
         </div>
     </td>
 </tr><tr>
