Update: main - Diff report completed

--- a/index.html
+++ b/index.html
@@ -16,11 +16,15 @@
 
                         <li><a href='diff_USB_energy_refactor.html'>Unified diff core:dev vs beta:origin/USB_energy_refactor</a></li>
 
+                        <li><a href='diff_add_switch_support.html'>Unified diff core:dev vs beta:origin/add_switch_support</a></li>
+
                         <li><a href='diff_add_typing.html'>Unified diff core:dev vs beta:origin/add_typing</a></li>
 
                         <li><a href='diff_core_75905.html'>Unified diff core:dev vs beta:origin/core_75905</a></li>
 
                         <li><a href='diff_correct_climate.html'>Unified diff core:dev vs beta:origin/correct_climate</a></li>
+
+                        <li><a href='diff_device_availability.html'>Unified diff core:dev vs beta:origin/device_availability</a></li>
 
                         <li><a href='diff_fix_250.html'>Unified diff core:dev vs beta:origin/fix_250</a></li>
 
